Adicionando tela home

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <main>
-        <section id="telefone">
-
-        </section>
+        <div id="teladiv">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <section id="telefone">
+            </section>
+        </div>
         <section id="redes-sociais">
             
         </section>
