--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
     <main>
         <div id="teladiv">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela"></iframe>
             <section id="telefone">
             </section>
         </div>
         <section id="redes-sociais">
-            
+            <a href="index.html" target="tela"><img src="images/logo-home.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="images/logo-github.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt=""></a><br>
         </section>
     </main>
 </body>
