--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             </section>
         </div>
         <section id="redes-sociais">
-            <a href="index.html" target="tela"><img src="images/logo-home.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="images/logo-github.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt=""></a><br>
+            <a href="home.html" target="tela"><img src="images/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"><img src="images/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt="Instagram"></a><br>
         </section>
     </main>
 </body>
