--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         </div>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="images/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="images/logo-github.jpg" alt="GitHub"></a><br>
-            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt="YouTube"></a><br>
-            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="github.html" target="tela"><img src="images/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="youtube.html" target="tela"><img src="images/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="instagram.html" target="tela"><img src="images/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="linkedin.html" target="tela"><img src="images/logo-linkedin.jpg" alt="LinkedIn"></a>
         </section>
     </main>
 </body>
