--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="github.html" target="tela"><img src="images/logo-github.jpg" alt="GitHub"></a><br>
             <a href="youtube.html" target="tela"><img src="images/logo-youtube.jpg" alt="YouTube"></a><br>
             <a href="instagram.html" target="tela"><img src="images/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="linkedin.html" target="tela"><img src="images/logo-linkedin.jpg" alt="LinkedIn"></a>
+            <a href="linkedin.html" target="tela"><img src="images/logo-linkedin.png" alt="LinkedIn"></a>
         </section>
     </main>
 </body>
