--- a/github.html
+++ b/github.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/social.css">
 </head>
-<style>
-    * {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    body {
-        width: 100vw;
-        height: 100vh;
-        background: black url("images/tela-github.jpg") no-repeat top center;
-        background-size: cover;
-        background-attachment: fixed;
-    }
-</style>
 <body>
+    <img src="images/tela-github.jpg" alt="GitHub">
+    <a href="https://github.com/jeiellima" target="_blank">ACESSE</a>
 </body>
 </html>
