--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <main>
-        <div id="teladiv">
+    <main>   
+        <section id="telefone">
             <iframe src="home.html" name="tela" id="tela"></iframe>
-            <section id="telefone">
-            </section>
-        </div>
+        </section>
+
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="images/logo-home.jpg" alt="Home"></a><br>
             <a href="github.html" target="tela"><img src="images/logo-github.jpg" alt="GitHub"></a><br>
             <a href="youtube.html" target="tela"><img src="images/logo-youtube.jpg" alt="YouTube"></a><br>
             <a href="instagram.html" target="tela"><img src="images/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="linkedin.html" target="tela"><img src="images/logo-linkedin.png" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/jeiel-lima1/" target="_blank"><img src="images/logo-linkedin.png" alt="LinkedIn"></a>
         </section>
     </main>
 </body>
