--- a/youtube.html
+++ b/youtube.html
@@ -4,42 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/social.css">
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
-    * {
-        margin: 0px;
-        padding: 0px;
-        font-family: 'Nunito', sans-serif;    
-    }
-
-    ::-webkit-scrollbar {
-        width: 0px;
-        height: 0px;
-    }
-
-    img {
-        width: 100vw;
-    }
-    
-    a {
-        display: block;
-        background-color: darkred;
-        padding: 20px;
-        text-align: center;
-        text-decoration: none;
-        color: white;
-        font-size: 25px;
-        transition: 0.3s;
-
-    }
-
-    a:hover {
-        background-color: #2e0000;
-    }
-
-</style>
 <body>
     <img src="images/tela-youtube.png" alt="YouTube">
     <a href="https://youtube.com/@jeiellima6903?si=WfBMvgSNItnBpAnX" target="_blank">ACESSE</a>
