--- a/home.html
+++ b/home.html
@@ -15,8 +15,7 @@
         width: 100vw;
         height: 100vh;
         background: black url("images/tela-home.png") no-repeat top center;
-        background-size: contain;
-        background-attachment: fixed;
+       background-size: cover;
     }
 </style>
 <body>
