--- a/instagram.html
+++ b/instagram.html
@@ -3,22 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/social.css">
     <title>Document</title>
 </head>
-<style>
-    * {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    body {
-        width: 100vw;
-        height: 100vh;
-        background: black url("images/tela-instagram.jpg") no-repeat top center;
-        background-size: cover;
-        background-attachment: fixed;
-    }
-</style>
 <body>
+    <img src="images/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/jeiellima1/" target="_blank">ACESSE</a>
 </body>
 </html>
